--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,7 +44,9 @@ html {
   width: 24%;
   height: 15vw;
   border-radius: 2%;
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -63,7 +65,6 @@ html {
   position: relative;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
-  opacity: 1;
 }
 
 @media (max-width: 768px) {
@@ -114,10 +115,18 @@ html {
 
 .card:hover h2 {
   color: #e3d2bd;
+  -webkit-transform: translate(0, -10px);
+          transform: translate(0, -10px);
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .card:hover h4 {
   color: #435368;
+  -webkit-transform: translate(0, -10px);
+          transform: translate(0, -10px);
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .odd {
